<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">adapter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
        <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_one">One</string>
    <string name="title_activity_two">Two</string>
    <string name="title_activity_three">Three</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="capture_picture">Capture picture</string>
	<string name="browse">Browse picture</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname</string>
    <string name="localhost">https://10.0.2.2:8443</string>
    <string name="admin">admin</string>
    <string name="pass">pass</string>
</resources>
