<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.One" >

    <TextView
        android:id="@+id/TextLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TextLine1"
        android:layout_toRightOf="@id/TextLine1"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextLine1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TextLine2"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/TextLine2"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextLine2"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:text="@string/image" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TextLine3"
        android:layout_toRightOf="@id/TextLine3"
        android:contentDescription="@string/browse"
        android:src="@android:drawable/ic_input_get" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TextLine3"
        android:layout_toRightOf="@id/imageView1"
        android:contentDescription="@string/capture_picture"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/TextLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@id/TextLine3"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@id/TextLine4"
        android:text="Submit" />

</RelativeLayout>